--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
   </head>
   <body>
     <noscript>
-      <b>Welcome to Web-Check, the free and open source tool for viewing all available information about a website.</b><br />
+      <b>Welcome to IntCheck, the free and open source tool for viewing all available information about a website.</b><br />
       Get started by entering a URL, and clicking the "Scan" button, or view the code and docs
       on <a href="https://github.com/lissy93/web-check">GitHub</a>.<br />
-      <small>Licensed under MIT, ©️ <a href="https://aliciasykes.com">Alicia Sykes</a> 2023.</small>
+      <small>Licensed under MIT, ©️ <a href="https://intellium.network">Intellium</a> 2023.</small>
       <br /><br />
       JavaScript is required to continue, please enable it in your browser.
     </noscript>
